Values to give imput

--- a/index.html
+++ b/index.html
@@ -6,7 +6,32 @@
     <title>Title</title>
 </head>
 <body>
-<h1>"maheen portfolio</h1>
+<h1>Do you get enough sleep? Check here to see how much lack of sleep you have.</h1>
+
+<div>
+    <label>Gender</label>
+    <select id="gender" name "Gender">
+        <option value="Female">Female</option>
+        <option value="Male">Male</option>
+    </select>
+</div>
+
+<div>
+    <label>Age</label>
+    <input type="text" name="Age">
+</div>
+
+<div>
+    <label>Time you got to sleep</label>
+    <input type="time" name="Time you go to sleep">
+</div>
+
+<div>
+    <label>Time you wake up</label>
+    <input type="time" name="Time you wake up">
+</div>
+
+
 
 <script src="main.js"></script>
 </body>
