making of "get result" button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>Do you get enough sleep? Check here to see how much lack of sleep you have.</h1>
 
+
 <div>
     <label>Gender</label>
     <select id="gender" name "Gender">
@@ -18,7 +19,7 @@
 
 <div>
     <label>Age</label>
-    <input type="text" name="Age">
+    <input type="number" name="Age">
 </div>
 
 <div>
@@ -31,7 +32,9 @@
     <input type="time" name="Time you wake up">
 </div>
 
-
+<div>
+<button> Get result</button>
+</div>
 
 <script src="main.js"></script>
 </body>
