--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div>
     <label>Gender</label>
-    <select id="gender" name "Gender">
+    <select> id="gender" name "Gender"
         <option value="Female">Female</option>
         <option value="Male">Male</option>
     </select>
