--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+<img src="75-754709_file-mccormick-sleep-svg-graphics-zzz-sleep-icon.png" alt="moon sleep icon" width="140" height="115">
 <h1>Do you get enough sleep? Check here to see how much lack of sleep you have.</h1>
 
 
@@ -35,6 +36,9 @@
 <div>
 <button> Get result</button>
 </div>
+
+<p></p>
+
 
 <script src="main.js"></script>
 </body>
